--- a/src/containers/Layout/Layout.module.css
+++ b/src/containers/Layout/Layout.module.css
@@ -1,4 +1,6 @@
-.container{
+.Content {
+    background-image: url(../../Images/darkMovieBG.jpg);
+    margin-top: 56px;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
