--- a/src/components/NewContent/NewContent.module.css
+++ b/src/components/NewContent/NewContent.module.css
@@ -1,6 +1,6 @@
 .Headcontent{
     box-shadow: 0 5px 25px 0 lightblue; 
-    margin-bottom: 30px; 
+    margin-top: 80px; 
     position: relative;
 }
 
