--- a/src/components/NewContent/NewContent.module.css
+++ b/src/components/NewContent/NewContent.module.css
@@ -1,3 +1,7 @@
+.Content{
+    padding: 0 0 20px;
+}
+
 .Headcontent{
     box-shadow: 0 5px 25px 0 lightblue; 
     margin-top: 80px; 
@@ -7,3 +11,4 @@
 .Headcontent h2{
     color: #ccc;
 }
+
