--- a/src/components/NewContent/NewContent.module.css
+++ b/src/components/NewContent/NewContent.module.css
@@ -6,9 +6,16 @@
     box-shadow: 0 5px 25px 0 lightblue; 
     margin-top: 80px; 
     position: relative;
+    color: black;
 }
 
 .Headcontent h2{
     color: #ccc;
+}
+
+@media (min-width: 768px){
+    .Headcontent {
+        margin-bottom: 50px;
+    }
 }
 
