--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -2,12 +2,12 @@
     position: fixed;
     z-index: 500;
     background-color: white;
-    width: 70%;
+    width: 80%;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
-    padding: 16px;
+    padding: 36px;
     left: 15%;
-    top: 10%;
+    top: 5%;
     box-sizing: border-box;
     transition: all 0.3s ease-out;
     color: #000;
@@ -24,5 +24,11 @@
         height: 500px;
         overflow-y: auto;
         top: 2%;
+    }
+}
+@media (min-height: 900px){
+    .Modal {
+        height: 70%;
+        overflow-y: auto;
     }
 }
