--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -8,7 +8,7 @@
     padding: 36px;
     left: 15%;
     top: 5%;
-    box-sizing: border-box;
+    box-sizing: content-box;
     transition: all 0.3s ease-out;
     color: #000;
 }
