--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -19,3 +19,9 @@ position: relative;
     border-radius: 4px;
     text-transform: uppercase;
 }
+
+button:disabled {
+    background-image: none;
+    box-shadow: none;
+    cursor: not-allowed;
+  }
