--- a/src/components/ListFavorites/FavoritesListDisplay/FavoritesListDisplay.module.css
+++ b/src/components/ListFavorites/FavoritesListDisplay/FavoritesListDisplay.module.css
@@ -1,25 +1,47 @@
-.card {
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.2s ease-in-out;
-    box-sizing: border-box;
-    margin-top:10px;
-    margin-bottom:10px;
-    background-color:#FFF;
-  }
-  
-  .card:hover {
-    box-shadow: 0 5px 5px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  }
-  .card > .card-inner {
-    padding:10px;
-  }
-  .card .header h2, h3 {
-    margin-bottom: 0px;
-    margin-top:0px;
-  }
-  .card .header {
-    margin-bottom:5px;
-  }
-  .card img{
-    width:100%;
-  }
+.infocard {
+  float: left;
+margin: 10px;
+perspective: 600px;
+}
+
+.front, .back {
+background: #FFF;
+border-radius: 10px;
+transition: -webkit-transform 1s;
+ transform-style: preserve-3d;
+ backface-visibility: hidden;
+border: 1px solid black;
+}
+
+.front {
+overflow: hidden;
+width: 250px;
+height: 330px;
+position: absolute;
+z-index: 1;
+}
+
+.back {
+padding: 20px;
+padding-top: 0px;
+width: 250px;
+height: 330px;
+transform: rotateY(-180deg);
+overflow: scroll;
+}
+
+.infocard:hover .back {
+ transform: rotateY(0);
+}
+
+.infocard:hover .front {
+ transform: rotateY(180deg);
+}
+
+.card_image {
+width: 100%;
+height: 100%;
+}
+
+
+
