--- a/src/components/ListFavorites/FavoritesListDisplay/FavoritesListDisplay.module.css
+++ b/src/components/ListFavorites/FavoritesListDisplay/FavoritesListDisplay.module.css
@@ -7,7 +7,7 @@ perspective: 600px;
 .front, .back {
 background: #FFF;
 border-radius: 10px;
-transition: -webkit-transform 1s;
+transition: transform 1s;
  transform-style: preserve-3d;
  backface-visibility: hidden;
 border: 1px solid black;
@@ -15,19 +15,21 @@ border: 1px solid black;
 
 .front {
 overflow: hidden;
-width: 250px;
-height: 330px;
+width: 280px;
+height: 350px;
 position: absolute;
 z-index: 1;
 }
 
 .back {
+  color: black;
 padding: 20px;
 padding-top: 0px;
-width: 250px;
-height: 330px;
+width: 280px;
+height: 350px;
 transform: rotateY(-180deg);
 overflow: scroll;
+background: #fff
 }
 
 .infocard:hover .back {
@@ -41,6 +43,16 @@ overflow: scroll;
 .card_image {
 width: 100%;
 height: 100%;
+}
+
+p.overview {
+  
+  font-size: 12px;
+  height: 200px;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  box-sizing: border-box;
 }
 
 
